Add link bulk discounts to merchant dashboard.

--- a/app/views/merchant/dashboard/show.html.erb
+++ b/app/views/merchant/dashboard/show.html.erb
@@ -15,3 +15,4 @@
 <% end %>
 
 <p><%= link_to "View My Items", '/merchant/items' %></p>
+<p><%= link_to "Bulk Discounts", '/merchant/bulk_discounts' %></p>
