add discounts column w/ custom message and sad path

--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -5,16 +5,23 @@
     <th>Price</th>
     <th>Quantity</th>
     <th>Subtotal</th>
-    <th>Sold By</th>
     <th>Inventory</th>
+    <th>Sold By</th>
+    <th>Discounts</th>
   </tr>
   <% cart.items.each do |item, quantity| %>
     <tr id='order-item-<%= item.id%>'>
-      <td><h2><%= link_to item.name, "/items/#{item.id}" %></h2></td>
+      <td><p><%= link_to item.name, "/items/#{item.id}" %></p></td>
       <td><p><%= number_to_currency(item.price) %></p></td>
       <td><p><%= quantity %></p></td>
       <td><p><%= number_to_currency(cart.subtotal(item)) %></p><td>
       <td><p><%= link_to item.merchant.name, "/merchants/#{item.merchant_id}" %></p></td>
+      <td><p><%=   if cart.discount(item) != []
+                    discount = cart.best_discount
+                    "#{discount.name} at #{discount.discount_percent}% off"
+                  else
+                    "Sorry No Discount Available"
+                  end  %></p></td>
       <td><p><%= item.inventory %> in stock</p></td>
     </tr>
   <% end %>
