Revise cart show page to pass item.id through subtotal.

--- a/app/views/cart/show.html.erb
+++ b/app/views/cart/show.html.erb
@@ -39,7 +39,7 @@
         </center>
         </td>
       <td>
-        <p><%=number_to_currency(cart.subtotal(item))%></p>
+        <p><%=number_to_currency(cart.subtotal(item.id))%></p>
     </td>
     </tr>
   <% end %>
