Revise bulk discount edit page, removing step option.

--- a/app/views/merchant/bulk_discounts/edit.html.erb
+++ b/app/views/merchant/bulk_discounts/edit.html.erb
@@ -4,7 +4,7 @@
   <%= text_field_tag :description %>
 
   <%= label_tag :discount_percent %>
-  <%= number_field_tag :discount_percent, :step => "0.01" %>
+  <%= number_field_tag :discount_percent %>
 
   <%= label_tag :minimum_quantity %>
   <%= number_field_tag :minimum_quantity %>
